<resources>
    <string name="app_name">ui</string>
    <string name="mission_label">Mission:</string>
    <string name="date_label">Date/time:</string>
    <string name="rocket_label">Rocket:</string>
    <string name="days_from_now_label">Days from now:</string>
    <string name="days_since_now_label">Days since now:</string>
    <string name="filter_dialog_title">Filter by</string>
    <string name="filter_label_launch_year">Launch year</string>
    <string name="filter_label_sort">Sort</string>
    <string name="filter_label_successful_launch">Only successful launches</string>
    <string name="no_data_message">No extra data, yet</string>
    <string name="read_article_text">Read article</string>
    <string name="play_video_text">Play video</string>
    <string name="open_wikipedia_text">Open Wikipedia</string>
    <string name="empty_state_prompt">I\'m the only result to your query.</string>
    <string name="change_filters">Change filters</string>
    <string name="company_label">About the company</string>
    <string name="launches_label">Launches</string>
    <string name="company_info_error_message">Couldn\'t load company info. Tap to retry</string>
    <string name="error_message">You need to be online to load new results</string>
    <string name="retry_prompt">Retry</string>
</resources>
