<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/mission_patch_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mission_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission_label"
        app:layout_constraintStart_toEndOf="@id/image_barrier"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mission_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/success_launch_image"
        app:layout_constraintStart_toEndOf="@id/content_barrier"
        app:layout_constraintTop_toTopOf="@id/mission_label"
        tools:text="USCV-1 (NASA Crew Flight 1)" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        app:layout_constraintStart_toEndOf="@id/mission_patch_image"
        app:layout_constraintTop_toBottomOf="@id/mission_name" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/success_launch_image"
        app:layout_constraintStart_toEndOf="@id/content_barrier"
        app:layout_constraintTop_toTopOf="@id/date_label"
        tools:text="23rd March 2006 at 13:00pm" />

    <TextView
        android:id="@+id/rocket_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rocket_label"
        app:layout_constraintStart_toEndOf="@id/mission_patch_image"
        app:layout_constraintTop_toBottomOf="@id/date_text" />

    <TextView
        android:id="@+id/rocket_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/success_launch_image"
        app:layout_constraintStart_toEndOf="@id/content_barrier"
        app:layout_constraintTop_toTopOf="@id/rocket_label"
        tools:text="Wololoolo / Woloo" />


    <TextView
        android:id="@+id/days_until_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_from_now_label"
        app:layout_constraintStart_toEndOf="@id/mission_patch_image"
        app:layout_constraintTop_toBottomOf="@id/rocket_text" />

    <TextView
        android:id="@+id/days_until_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/success_launch_image"
        app:layout_constraintStart_toEndOf="@id/content_barrier"
        app:layout_constraintTop_toTopOf="@id/days_until_label"
        tools:text="66" />

    <ImageView
        android:id="@+id/success_launch_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/content_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="mission_label,date_label,rocket_label,days_until_label" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/image_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="mission_patch_image" />

</androidx.constraintlayout.widget.ConstraintLayout>